--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                 </div>
         </div>
         <div id="page3">
-            <video src="https://lazarev.kiev.ua/la24/la-reel--min.mp4"></video>
+            <video src="./assets/la-reel--min.mp4"></video>
             <div class="page3-center">
                 <div class="icon">
                     <i class="ri-play-fill"></i>
-              8  </div>
+                </div>
                 <h5>Watch Showreel</h5>
             </div>
         </div>
@@ -160,7 +160,7 @@
                 <div class="sec-right">
                     <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65a93ac90b586168e5917ac8_Rhea%20-%20cover_horizontal_low.webp"
                         alt="">
-                    <video muted src="./accern-rhea-cover-big.mp4"></video>
+                    <video muted src="./assets/accern-rhea-cover-big.mp4"></video>
                 </div>
             </div>
             <div class="section">
@@ -172,7 +172,7 @@
                 <div class="sec-right">
                     <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65cb66041ce86ac3784aaba1_Afrotech%20-%20cover_horizontal.webp"
                         alt="">
-                    <video muted src="https://lazarev.kiev.ua/cases/la24/afrotech-cover-big.mp4"></video>
+                    <video muted src="./assets/afrotech-cover-big.mp4"></video>
                 </div>
             </div>
         </div>
@@ -183,12 +183,12 @@
             <div class="right1">
                 <h2>Blockbeat</h2>
                 <p>Ai-powered crypto trading terminal that provides <br> trades with continuously updated,streamlined,and <br> disilled data throughout the day.</p>
-                <img src="Blockbeat.png" alt="Blockbeat">
+                <img src="./assets/Blockbeat.png" alt="Blockbeat">
             </div>
             <div class="right2">
                 <h2>Payoneer</h2>
                 <p>Rethinking user experience and interface design <br> for the top financial service firm listed on the Financial <br> Times FT1000</p>
-                <img src="payoneer.png" alt="Payoneer">
+                <img src="./assets/payoneer.png" alt="Payoneer">
             </div>
             </div>
         </div>
